WebKitTools/DumpRenderTree/mac/DumpRenderTree.mm
@@ -550,15 +550,17 @@ static void convertWebResourceDataToString(NSMutableDictionary *resource)
     }
 }
 
-static void normalizeWebResourceURL(NSMutableString *webResourceURL, NSString *oldURLBase)
+static void normalizeWebResourceURL(NSMutableString *webResourceURL)
 {
-    [webResourceURL replaceOccurrencesOfString:oldURLBase
-                                    withString:@"file://"
-                                       options:NSLiteralSearch
-                                         range:NSMakeRange(0, [webResourceURL length])];
+    static int fileUrlLength = [@"file://" length];
+    NSRange layoutTestsWebArchivePathRange = [webResourceURL rangeOfString:@"/LayoutTests/" options:NSBackwardsSearch];
+    if (layoutTestsWebArchivePathRange.location == NSNotFound)
+        return;
+    NSRange currentWorkingDirectoryRange = NSMakeRange(fileUrlLength, layoutTestsWebArchivePathRange.location - fileUrlLength);
+    [webResourceURL replaceCharactersInRange:currentWorkingDirectoryRange withString:@""];
 }
 
-static void convertWebResourceResponseToDictionary(NSMutableDictionary *propertyList, NSString *oldURLBase)
+static void convertWebResourceResponseToDictionary(NSMutableDictionary *propertyList)
 {
     NSURLResponse *response = nil;
     NSData *responseData = [propertyList objectForKey:@"WebResourceResponse"]; // WebResourceResponseKey in WebResource.m
@@ -573,7 +575,7 @@ static void convertWebResourceResponseToDictionary(NSMutableDictionary *property
     NSMutableDictionary *responseDictionary = [[NSMutableDictionary alloc] init];
     
     NSMutableString *urlString = [[[response URL] description] mutableCopy];
-    normalizeWebResourceURL(urlString, oldURLBase);
+    normalizeWebResourceURL(urlString);
     [responseDictionary setObject:urlString forKey:@"URL"];
     [urlString release];
     
@@ -608,9 +610,6 @@ static NSString *serializeWebArchiveToXML(WebArchive *webArchive)
     if (!propertyList)
         return errorString;
 
-    // Normalize WebResourceResponse and WebResourceURL values in plist for testing
-    NSString *cwdURL = [@"file://" stringByAppendingString:[[[NSFileManager defaultManager] currentDirectoryPath] stringByExpandingTildeInPath]];
-    
     NSMutableArray *resources = [NSMutableArray arrayWithCapacity:1];
     [resources addObject:propertyList];
 
@@ -619,7 +618,7 @@ static NSString *serializeWebArchiveToXML(WebArchive *webArchive)
         [resources removeObjectAtIndex:0];
 
         NSMutableDictionary *mainResource = [resourcePropertyList objectForKey:@"WebMainResource"];
-        normalizeWebResourceURL([mainResource objectForKey:@"WebResourceURL"], cwdURL);
+        normalizeWebResourceURL([mainResource objectForKey:@"WebResourceURL"]);
         convertWebResourceDataToString(mainResource);
 
         // Add subframeArchives to list for processing
@@ -631,8 +630,8 @@ static NSString *serializeWebArchiveToXML(WebArchive *webArchive)
         NSEnumerator *enumerator = [subresources objectEnumerator];
         NSMutableDictionary *subresourcePropertyList;
         while ((subresourcePropertyList = [enumerator nextObject])) {
-            normalizeWebResourceURL([subresourcePropertyList objectForKey:@"WebResourceURL"], cwdURL);
-            convertWebResourceResponseToDictionary(subresourcePropertyList, cwdURL);
+            normalizeWebResourceURL([subresourcePropertyList objectForKey:@"WebResourceURL"]);
+            convertWebResourceResponseToDictionary(subresourcePropertyList);
             convertWebResourceDataToString(subresourcePropertyList);
         }
     }
